--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 <html>
   <head>
-    <title>Democracy In Action</title>
-    
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <title>Democracy In Action</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Le styles -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="assets/css/docs.css" rel="stylesheet">
+  <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-     <link rel="stylesheet" href="https://cdn.glitch.com/848efdfe-646e-4168-831b-03dc6890fcd3%2Fbootstrap.css?1516067408298" type="text/css">
-    <link rel="stylesheet" href="https://cdn.glitch.com/848efdfe-646e-4168-831b-03dc6890fcd3%2Fbootstrap-theme.css?1516067408014" type="text/css">
-  
-  <style>
-    @font-face {
-  font-family: 'DOS';
-  font-style: normal;
-  font-weight: normal;
-  src: url('https://cdn.glitch.com/848efdfe-646e-4168-831b-03dc6890fcd3%2FFixedsys500c.eot?1516067858676');
-  src: local('☺'), url('https://cdn.glitch.com/848efdfe-646e-4168-831b-03dc6890fcd3%2FFixedsys500c.woff?1516067863073') format('woff');
-}
+<style></style><script type="text/javascript" charset="utf-8" async="" src="https://platform.twitter.com/js/button.415474f2e22cee7df272249c34e8f0b1.js"></script><style id="holderjs-style" type="text/css">.holderjs-fluid {font-size:16px;font-weight:bold;text-align:center;font-family:sans-serif;margin:0}</style></head>
     </style>
   </head>
   <body>
